added "toLocalDateString" date modified display filter to all project grids. Restricted character limit on "Project Name" when creating new projects in order to prevent error Files modified - [MunicipalityAdministration,ManageProjects,CompanyProjects,MunicipalityProjects,MyProjects]

--- a/src/main/webapp/pages/CompanyProjects/CompanyProjects.html
+++ b/src/main/webapp/pages/CompanyProjects/CompanyProjects.html
@@ -25,8 +25,7 @@
                         <wm-grid title="" dataset="bind:Variables.svProjectsByVendor.dataSet" navigation="Classic" name="gridProjects" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
                             <wm-grid-column binding="projectName" caption="Project Name" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="fullName" caption="Created By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="createdDate" caption="Date Created" type="string" datepattern="MM-dd-yy hh:mm a" formatpattern="toDate" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="modifiedDate" caption="Date Modified" type="string" datepattern="MM-dd-yy hh:mm a" formatpattern="toDate" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="modifiedDate" caption="Date Modified" type="string" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" edit-widget-type="text" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                             <wm-grid-action key="addNewRow" display-name="New Project" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Project" action="Widgets.dialogCreateProject.open()" shortcutkey="" disabled="false"></wm-grid-action>
                             <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Project" action="Variables.ngViewProject.invoke()" disabled="false"></wm-grid-row-action>
@@ -57,7 +56,7 @@
                         <wm-composite name="composite3" required="true">
                             <wm-label class="col-md-3 form-control-static" name="label7" caption="Project Name" fontweight="bold" required="false" width="160px"></wm-label>
                             <wm-container class="col-md-9" name="container3" width="300px">
-                                <wm-text name="textProjectName" placeholder="Enter Text" required="false"></wm-text>
+                                <wm-text name="textProjectName" placeholder="Enter Text" required="false" maxchars="255"></wm-text>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
