--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -35,6 +35,20 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn157"></wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow108">
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn199"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn200">
+                                        <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" datafield="All Fields" dataset="bind:Variables.Gis2formsData.dataSet" navigation="None"
+                                        name="livelistViewAddress" loadingdatamsg="Loading Address..." nodatamessage="No Address Specified">
+                                            <wm-listtemplate layout="inline" name="listtemplate6">
+                                                <wm-container class="media-body" name="container19" horizontalalign="center">
+                                                    <wm-label class="p media-heading" name="Name" caption="bind:Variables.Gis2formsData.dataSet[$i].gisrecords.fullAddress" fontunit="em" padding="unset unset unset 1.25em"></wm-label>
+                                                </wm-container>
+                                            </wm-listtemplate>
+                                        </wm-livelist>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn201"></wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow83_1">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn156_3"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn156_2" horizontalalign="center">
