Subdivision types Files modified - [ManageGISData,EditGISRecord,cx2]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -31,16 +31,18 @@
                                                 dataset="bind:Variables.CurrentMunicipalitySubdivisions.dataSet" datafield="All Fields"></wm-form-field>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn8">
-                                                <wm-form-field name="section" displayname="Section" show="true" primary-key="false" generator="assigned" key="section" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
-                                                placeholder="Enter value" disabled="false"></wm-form-field>
+                                                <wm-label padding="unset 0.5em" name="labelSubdivisionType" caption="bind:Widgets.liveformGisrecords.formWidgets.subdivisions.datavalue.subdivisionType" class="h2"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow5" padding="unset unset 4em unset">
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn9">
+                                                <wm-form-field name="section" displayname="Section" show="true" primary-key="false" generator="assigned" key="section" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
+                                                placeholder="Enter value" disabled="false"></wm-form-field>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="4" name="gridcolumn10">
                                                 <wm-form-field name="lot" displayname="Lot" show="true" primary-key="false" generator="assigned" key="lot" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
                                                 disabled="false"></wm-form-field>
                                             </wm-gridcolumn>
-                                            <wm-gridcolumn columnwidth="4" name="gridcolumn10"></wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="4" name="gridcolumn11"></wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow6">
