--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -52,9 +52,9 @@
                                                     placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn33_1">
-                                                    <wm-form-field name="subdivisions" displayname="Subdivision" show="true" primary-key="false" generator="assigned" key="subdivisions" type="list" is-related="true" readonly="false" required="false" widget="autocomplete"
-                                                    placeholder="Search by Subdivision Name" displayexpression="subdivision + ' ' + subdivision" orderby="subdivision:asc" searchkey="subdivision" displaylabel="subdivision" dataset="bind:Variables.Cx2SubdivisionsData.dataSet"
-                                                    datafield="All Fields"></wm-form-field>
+                                                    <wm-form-field name="subdivisions" displayname="bind:&quot;Subdivision: &quot;+Widgets.liveform3.formWidgets.subdivisions.datavalue.subdivisionType" show="true" primary-key="false" generator="assigned" key="subdivisions"
+                                                    type="list" is-related="true" readonly="false" required="false" widget="autocomplete" placeholder="Search by Subdivision Name" displayexpression="subdivision + ' ' + subdivision" orderby="subdivision:asc"
+                                                    searchkey="subdivision" displaylabel="subdivision" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" datafield="All Fields"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn34">
                                                     <wm-form-field name="section" displayname="Section" show="true" primary-key="false" generator="assigned" key="section" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text"
@@ -174,9 +174,10 @@
                                 <wm-livegrid formlayout="dialog" name="livegrid1">
                                     <wm-grid gridfirstrowselect="false" editmode="dialog" title="" dataset="bind:Variables.Cx2SubdivisionsData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL" on-click="Widgets.dialogSubdivisonParcels.open()"
                                     showrecordcount="true">
-                                        <wm-grid-column binding="subdivision" caption="Subdivision" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="subShortCode" caption="Sub Short Code" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                        <wm-grid-column binding="subdivisionType" caption="Subdivision Type" type="string" primary-key="false" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="subdivision" caption="Subdivision" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="subShortCode" caption="Sub Short Code" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                         <wm-grid-action key="addNewRow" display-name="New Subdivision" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Subdivision" action="addNewRow();addNewRowAction($event)" accessroles="CXAdmin,MunicipalityAdmin"
                                         shortcutkey="" disabled="false" icon="wi wi-playlist-add"></wm-grid-action>
                                         <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-list" title="View Details" action="Widgets.dialogSubdivisonParcels.open()" disabled="false"></wm-grid-row-action>
@@ -188,23 +189,28 @@
                                         <wm-layoutgrid columns="1" name="layoutgrid1">
                                             <wm-gridrow name="gridrow1">
                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn1">
-                                                    <wm-form-field name="subdivision" displayname="Subdivision Name" show="true" primary-key="false" generator="assigned" key="subdivision" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                    required="true"></wm-form-field>
+                                                    <wm-form-field name="subdivision" displayname="Subdivision Name" show="true" primary-key="false" generator="assigned" key="subdivision" type="string" readonly="false" required="true" widget="text" maxchars="255"
+                                                    inputtype="text" placeholder="Enter value"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow2">
                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn2">
-                                                    <wm-form-field name="subShortCode" displayname="Sub Short Code" show="true" primary-key="false" generator="assigned" key="subShortCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                                    required="true"></wm-form-field>
+                                                    <wm-form-field name="subShortCode" displayname="Sub Short Code" show="true" primary-key="false" generator="assigned" key="subShortCode" type="string" readonly="false" required="true" widget="text" defaultvalue="a"
+                                                    maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                </wm-gridcolumn>
+                                            </wm-gridrow>
+                                            <wm-gridrow name="gridrow1">
+                                                <wm-gridcolumn name="gridcolumn1" columnwidth="12">
+                                                    <wm-form-field name="subdivisionType" displayname="Subdivision Type" show="true" primary-key="false" generator="assigned" key="subdivisionType" type="string" readonly="false" required="true" widget="select"
+                                                    maxchars="255" dataset="Residential,Commercial,Industrial"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                         </wm-layoutgrid>
-                                        <wm-form-field name="subdivisionGuid" displayname="Subdivision Guid" show="false" primary-key="false" generator="assigned" key="subdivisionGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID"
-                                        inputtype="text" placeholder="Enter value"></wm-form-field>
-                                        <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" dataset="bind:Variables.SelectedMunicipalityObj.dataSet"
-                                        datafield="All Fields" displayfield="municipalityName" defaultvalue="bind:Variables.SelectedMunicipalityObj.firstRecord" placeholder="Select value"></wm-form-field>
-                                        <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
-                                        placeholder=""></wm-form-field>
+                                        <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
+                                        <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" readonly="false" required="false"
+                                        widget="select" dataset="bind:Variables.SelectedMunicipalityObj.dataSet" datafield="All Fields" displayfield="municipalityName" defaultvalue="bind:Variables.SelectedMunicipalityObj.firstRecord" placeholder="Select value"></wm-form-field>
+                                        <wm-form-field name="subdivisionGuid" displayname="Subdivision Guid" show="false" primary-key="false" generator="assigned" key="subdivisionGuid" type="string" readonly="false" required="false" widget="text"
+                                        maxchars="255" defaultvalue="bind:GUID" inputtype="text" placeholder="Enter value"></wm-form-field>
                                         <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                         <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                                     </wm-liveform>
@@ -228,12 +234,20 @@
                         <wm-label padding="unset 0.5em" name="label7" caption="bind:Widgets.grid1.selecteditem.subdivision" fontweight="bold" fontsize="20" class="form-control-static"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow14" padding="unset unset 2em unset">
+                <wm-gridrow name="gridrow14">
                     <wm-gridcolumn columnwidth="3" name="gridcolumn32_2">
                         <wm-label padding="unset 0.5em unset 3em" caption="Short Code" name="label4" class="form-control-static"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="9" name="gridcolumn33_2">
                         <wm-label padding="unset 0.5em" name="label8" caption="bind:Widgets.grid1.selecteditem.subShortCode" fontweight="bold" fontsize="20" class="form-control-static"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow28" padding="unset unset 2em unset">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn67">
+                        <wm-label padding="unset 0.5em unset 3em" caption="Subdivision Type" class="form-control-static" name="label7_1"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="9" name="gridcolumn68">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.grid1.selecteditem.subdivisionType" fontweight="bold" fontsize="20" class="form-control-static" name="label8_1"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow13">
